--- a/Flyiing Hiigh/FlyiingHiigh.csproj
+++ b/Flyiing Hiigh/FlyiingHiigh.csproj
@@ -117,7 +117,7 @@
       <Version>1.60.1</Version>
     </PackageReference>
     <PackageReference Include="Xam.Plugin.SimpleAudioPlayer">
-      <Version>1.1.0</Version>
+      <Version>1.2.1.1-beta</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Android.Support.Design">
       <Version>27.0.2</Version>
@@ -261,6 +261,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Drawable\optionsmuted.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\Drawable\StartScreen\BackgroundName.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
