--- a/Flyiing Hiigh/FlyiingHiigh.csproj
+++ b/Flyiing Hiigh/FlyiingHiigh.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Audiomanager.cs" />
+    <Compile Include="ScoreActivity.cs" />
     <Compile Include="ObjBackground.cs" />
     <Compile Include="ObjEnemyBee.cs" />
     <Compile Include="ObjEnemySpider.cs" />
@@ -256,6 +257,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Drawable\optionsmuted.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\ScoreScreen.axml">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
