--- a/Flyiing Hiigh/FlyiingHiigh.csproj
+++ b/Flyiing Hiigh/FlyiingHiigh.csproj
@@ -290,6 +290,9 @@
     <AndroidResource Include="Resources\values\style.xml">
     </AndroidResource>
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\Drawable\background50.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
 		Other similar extension points exist, see Microsoft.Common.targets.
